--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,13 @@
 .content
 {
   font-size:2rem;
+
   }
-  
+p.bg
+{
+  background-image:"image.jpg";
+}
+
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
