--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%-include("partials/header");-%>
       <h1>Home</h1>
-      <p class="content"><%=homeStartingContent%></p>
+      <p class="content bg"><%=homeStartingContent%></p>
 
       <br>
       <form class="" action="/compose" method="get">
